Version 7.5.0
-------------

- Add support for configuring an HTTP proxy in the DSN.
- Add more debugging information to ``RavenFactory.ravenInstance``.

Version 7.4.0
-------------

- Changed default ``raven.async.queuesize`` from unlimited to 50.
- Add callback system for exceptions raised while attempting to send events.

Version 7.3.0
-------------

- Add (manual) support for breadcrumbs to event objects.
- Add ``sendEvent(EventBuilder)`` method which calls builder helpers before building and sending the ``Event``.
- Add ``RavenContext`` which tracks thread-local state.
- Add ``Breadcrumbs`` helper to log breadcrumbs from anywhere without manually passing context around.

Version 7.2.3
-------------

- Accept ``Throwable`` instances as parameter to ``Raven.sendException``.
- Add ``raven.async.shutdowntimeout`` option.
- Remove default ``WARNING`` filter level for the Logback appender.

Version 7.2.2
-------------

- Fix ServerName configuration in ``raven-log4j``.

Version 7.2.1
-------------

- Drop dependency on Guava.

Version 7.2.0
-------------

- Add printfStyle option to JUL integration. (thanks giilby)
- Updated Log4j2 documentation to refer to the Thread Context rather than the MDC. (thanks grobmeier)
- Fix duplicate ShutdownHook warnings in ``raven-log4j2``.
- Add way to override how remote addresses are resolved (RemoteAddressResolver interface). (thanks j-fernandes)
- Add way to set ``serverName`` statically in configuration. (thanks mattbillenstein)

Version 7.1.0
-------------

- Use RavenFactory's class loader when creating the service loader, fixing some issues in containers. (thanks exell-christopher)
- Add ``release`` property to ``raven-log4j``. (thanks molaschi)
- Add ``release`` property to JUL integration and ``raven-log4j2``.
- Add setters for ``dsn`` and ``tags`` in JUL integration, fixes integration with WildFly. (thanks giilby)


Version 7.0.0
-------------

- Changed Maven groupId to ``com.getsentry``