@@ -20,7 +20,6 @@ import java.util.Date;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.MissingFormatArgumentException;
 import java.util.Set;
 import java.util.logging.ErrorManager;
 import java.util.logging.Handler;
@@ -220,21 +219,23 @@ public class SentryHandler extends Handler {
         if (record.getResourceBundle() != null && record.getResourceBundle().containsKey(record.getMessage())) {
             message = record.getResourceBundle().getString(record.getMessage());
         }
-        if (record.getParameters() != null) {
+
+        String topLevelMessage = message;
+        if (record.getParameters() == null) {
+            eventBuilder.withSentryInterface(new MessageInterface(message));
+        } else {
+            String formatted;
             List<String> parameters = formatMessageParameters(record.getParameters());
-            eventBuilder.withSentryInterface(new MessageInterface(message, parameters));
-            if (printfStyle) {
-                try {
-                    message = String.format(message, record.getParameters());
-                } catch (MissingFormatArgumentException e) {
-                    // use unformatted message
-                    message = record.getMessage();
-                }
-            } else {
-                message = MessageFormat.format(message, record.getParameters());
+            try {
+                formatted = formatMessage(message, record.getParameters());
+                topLevelMessage = formatted; // write out formatted as Event's message key
+            } catch (Exception e) {
+                // local formatting failed, send message and parameters without formatted string
+                formatted = null;
             }
+            eventBuilder.withSentryInterface(new MessageInterface(message, parameters, formatted));
         }
-        eventBuilder.withMessage(message);
+        eventBuilder.withMessage(topLevelMessage);
 
         Throwable throwable = record.getThrown();
         if (throwable != null)
@@ -275,6 +276,16 @@ public class SentryHandler extends Handler {
 
         raven.runBuilderHelpers(eventBuilder);
         return eventBuilder.build();
+    }
+
+    private String formatMessage(String message, Object[] parameters) {
+        String formatted;
+        if (printfStyle) {
+            formatted = String.format(message, parameters);
+        } else {
+            formatted = MessageFormat.format(message, parameters);
+        }
+        return formatted;
     }
 
     @Override
