@@ -3,6 +3,7 @@ Version 7.5.0
 
 - Add support for configuring an HTTP proxy in the DSN.
 - Add more debugging information to ``RavenFactory.ravenInstance``.
+- Add ``formatted`` field to JSON payload if possible.
 
 Version 7.4.0
 -------------
